add jenkins plugins, disable authentication

--- a/install-jenkins/files/docker-compose.yml
+++ b/install-jenkins/files/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     ports:
       - 8080:8080
       - 50000:50000
+    environment:
+      - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
     volumes:
       - ./jenkins-data:/var/jenkins_home
     networks:
