--- a/jenkins-install/tasks/main.yml
+++ b/jenkins-install/tasks/main.yml
@@ -4,30 +4,40 @@
 - name: Create directory for Jenkins 
   file:
     state: directory
-    path: "/opt/jenkins"
+    path: '/opt/jenkins'
     mode: '0755'
 
 - name: Create jenkins data directory
   file:
     state: directory
-    path: "/opt/jenkins/jenkins-data"
+    path: '/opt/jenkins/jenkins-data'
     mode: '0755'
+
+- name: Create jenkins init directory
+  file:
+    state: directory
+    path: '/opt/jenkins/init.groovy.d'
+    mode: '0644'
 
 - name: Copy docker-compose.yml
   copy: 
     src: docker-compose.yml
-    dest: "/opt/jenkins"
+    dest: '/opt/jenkins'
     mode: '0644' 
 
 - name: Copy jenkins-cli.jar
   copy:
     src: jenkins-cli.jar
-    dest: "/opt/jenkins"
+    dest: '/opt/jenkins'
     mode: '0755'
+
+- name: Copy groovy file for install maven
+  copy:
+    src: maven-install.groovy
+    dest: '/opt/jenkins'
 
 - name: Create docker network
   shell: 'docker network create -d bridge --subnet=10.10.10.0/24 jenkins_nexus'
-
 
 - name: Start jenkins
   shell: 'docker-compose -f /opt/jenkins/docker-compose.yml up -d'
@@ -44,7 +54,6 @@
 
 - name: Add workflow plugin
   shell: 'docker exec jenkins java -jar /var/jenkins_home/jenkins-cli.jar -s http://localhost:8080/ install-plugin workflow-aggregator:2.6'
-
 
 - name: Add pipeline plugin
   shell: 'docker exec jenkins java -jar /var/jenkins_home/jenkins-cli.jar -s http://localhost:8080/ install-plugin pipeline-utility-steps:2.8.0 -restart'
