--- a/jenkins-install/tasks/main.yml
+++ b/jenkins-install/tasks/main.yml
@@ -36,6 +36,16 @@
     src: maven-install.groovy
     dest: '/opt/jenkins/jenkins-data/init.groovy.d'
 
+- name: Copy groovy file for disable crumb
+  copy:
+    src: crumb-disable.groovy
+    dest: '/opt/jenkins/jenkins-data/init.groovy.d'
+
+- name: Copy config.xml for Jenkins job
+  copy:
+    src: config.xml
+    dest: '/opt/jenkins/'
+
 - name: Create docker network
   shell: 'docker network create -d bridge --subnet=10.10.10.0/24 jenkins_nexus'
 
@@ -58,8 +68,13 @@
 - name: Add pipeline plugin
   shell: 'docker exec jenkins java -jar /var/jenkins_home/jenkins-cli.jar -s http://localhost:8080/ install-plugin pipeline-utility-steps:2.8.0 -restart'
 
+- name: Wait for restart Jenkins
+  wait_for: timeout=30
 
-
-  
-
-  
+- name: Create job configuration
+  uri:
+    url: http://localhost:8080/createItem?name=jenkins-nexus
+    method: POST
+    src: config.xml
+    headers:
+      Content-Type: application/xml 
