--- a/jenkins-install/tasks/main.yml
+++ b/jenkins-install/tasks/main.yml
@@ -66,7 +66,10 @@
   shell: 'docker exec jenkins java -jar /var/jenkins_home/jenkins-cli.jar -s http://localhost:8080/ install-plugin workflow-aggregator:2.6'
 
 - name: Add pipeline plugin
-  shell: 'docker exec jenkins java -jar /var/jenkins_home/jenkins-cli.jar -s http://localhost:8080/ install-plugin pipeline-utility-steps:2.8.0 -restart'
+  shell: 'docker exec jenkins java -jar /var/jenkins_home/jenkins-cli.jar -s http://localhost:8080/ install-plugin pipeline-utility-steps:2.8.0'
+
+- name: Add GitHub Branch Source
+  shell: 'docker exec jenkins java -jar /var/jenkins_home/jenkins-cli.jar -s http://localhost:8080/ install-plugin github-branch-source:2.10.4 -restart'
 
 - name: Wait for restart Jenkins
   wait_for: timeout=30
@@ -81,3 +84,4 @@
 
 - name: Start job
   shell: 'docker exec jenkins java -jar /var/jenkins_home/jenkins-cli.jar -s http://localhost:8080/ build jenkins-nexus'
+
