--- a/jenkins-install/tasks/main.yml
+++ b/jenkins-install/tasks/main.yml
@@ -46,6 +46,16 @@
     src: config.xml
     dest: '/opt/jenkins/'
 
+- name: Copy credentials.sh to create Nexus credentials
+  copy:
+    src: credentials.sh
+    dest: '/opt/jenkins/'
+
+- name: Script for change password Nexus
+  copy:
+    src: change_pass.sh
+    dest: '/opt/jenkins/'
+
 - name: Start jenkins
   shell: 'docker-compose -f /opt/jenkins/docker-compose.yml up -d'
   register: out
@@ -71,13 +81,11 @@
 - name: Wait for restart Jenkins
   wait_for: timeout=30
 
+- name: Change pass in file cretedials.sh
+  shell: 'sh /opt/jenkins/change_pass.sh'
+
 - name: Create credentials to nexus
-  uri:
-    url: http://localhost:8080/credentials/store/system/domain/_/createCredentials
-    method: POST
-    body_format: json
-    body: '{"": "0","credentials": {"scope": "GLOBAL","id": "Anonymous","username": "Anonymous","password": "","description": "linda","$class": "com.cloudbees.plugins.credentials.impl.UsernamePasswordCredentialsImpl"}}' 
-        
+  shell: 'sh /opt/jenkins/credentials.sh'
  
 - name: Create job configuration
   uri:
@@ -89,4 +97,3 @@
 
 - name: Start job
   shell: 'docker exec jenkins java -jar /var/jenkins_home/jenkins-cli.jar -s http://localhost:8080/ build jenkins-nexus'
-
