--- a/nginx-over-https/files/jenkins.conf
+++ b/nginx-over-https/files/jenkins.conf
@@ -12,10 +12,9 @@ location / {
 
 server {
     listen 443 ssl http2;
-    ssl on;
     server_name jenkins.example.org;
-    ssl_crttificate     /etc/nginx/example.crt;
-    ssl_crttificate_key /etc/nginx/example.key;
+    ssl_certificate     /etc/nginx/example.crt;
+    ssl_certificate_key /etc/nginx/example.key;
 
 location / {
     proxy_pass http://jenkins:8080;
@@ -41,10 +40,9 @@ location / {
 
 server {
     listen 443 ssl http2;
-    ssl on;
     server_name nexus.example.org;
-    ssl_crttificate     /etc/nginx/example.crt;
-    ssl_crttificate_key /etc/nginx/example.key;
+    ssl_certificate     /etc/nginx/example.crt;
+    ssl_certificate_key /etc/nginx/example.key;
 
 location / {
     proxy_pass http://nexus:8081;
