--- a/nginx-over-https/tasks/main.yml
+++ b/nginx-over-https/tasks/main.yml
@@ -31,7 +31,7 @@
   register: out
 
 - name: Add local loop in /etc/hosts
-  linefile:
+  lineinfile:
     dest: /etc/hosts
     line: '{{ item }}'
   with_items:
