--- a/nginx-over-https/files/jenkins.conf
+++ b/nginx-over-https/files/jenkins.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name jenkins.example.org;
+    server_name jenkins.example.com;
 
 location / {
     proxy_pass http://jenkins:8080;
@@ -12,7 +12,7 @@ location / {
 
 server {
     listen 443 ssl http2;
-    server_name jenkins.example.org;
+    server_name jenkins.example.com;
     ssl_certificate     /etc/nginx/example.crt;
     ssl_certificate_key /etc/nginx/example.key;
 
@@ -28,7 +28,7 @@ location / {
 
 server {
     listen 80;
-    server_name nexus.example.org;
+    server_name nexus.example.com;
 
 location / {
     proxy_pass http://nexus:8081;
@@ -40,7 +40,7 @@ location / {
 
 server {
     listen 443 ssl http2;
-    server_name nexus.example.org;
+    server_name nexus.example.com;
     ssl_certificate     /etc/nginx/example.crt;
     ssl_certificate_key /etc/nginx/example.key;
 
